SERVER-30934 Check if DB is null before getting collection